# cinnamon

./: .gitignore  AGENTS.md  LICENSE  README.md  debug_vidsrc.py  fetch_stream.js  fetch_stream2.js  fetch_stream3.js  package.json  pyproject.toml  requirements.txt  test_delayed_add.mjs  test_dht.js  test_directstream.py  test_directstream4.py  test_directstream5.py  test_directstream6.py  test_lookup.mjs  test_webtorrent_esm.mjs  webtorrent_stream.mjs  webtorrent_wrapper.js
.github/workflows/: workflow.yml
cinnamon/: anilist.py  cli.py  config.py  downloads.py  embedapi.py  errors.py  history.py  player.py  tmdb.py  tui.py  webtorrent_stream.mjs
cinnamon/scrapers/: __init__.py  _vidlink_crypto.py  anime.py  base.py  directstream.py  example.py  torrentio.py  vidsrc.py  webstream.py  xpass.py
tests/: probe_embedapi.py  test_diag.mjs  test_directstream2.py  test_directstream3.py  test_full_flow.mjs  test_ui_smoke.py  test_webtorrent.js
