[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cinnamon"
version = "0.2.2"
description = "CLI to search TV shows via TMDB, scrape m3u8 links, and play in VLC/mpv"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "requests>=2",
    "rich>=13",
    "questionary>=2",
    "textual>=8",
    "pycryptodome>=3",
]

[project.optional-dependencies]
scrapers = [
    "playwright>=1.60",
]

[tool.setuptools.packages.find]
include = ["cinnamon*"]
exclude = ["tests*", "node_modules*"]

[project.scripts]
cinnamon = "cinnamon.cli:cli"
