[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cinnamon-cli"
version = "0.2.38"
description = "Watch Movies, TV shows and anime from your terminal."
license = { text = "CC BY-NC 4.0" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "pizza-droid" },
]
keywords = ["tv", "movies", "anime", "streaming", "mpv", "vlc", "tmdb", "anilist", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8",
    "requests>=2",
    "rich>=13",
    "questionary>=2",
    "pycryptodome>=3",
]
[project.urls]
Homepage = "https://github.com/pizza-droid/cinnamon"
Repository = "https://github.com/pizza-droid/cinnamon"
Issues = "https://github.com/pizza-droid/cinnamon/issues"

[project.optional-dependencies]
scrapers = [
    "playwright>=1.60",
]
vidlink = [
    "pynacl>=1.5",
]
download = [
    "yt-dlp>=2024.1.0",
]

[tool.setuptools.packages.find]
include = ["cinnamon*"]
exclude = ["tests*", "node_modules*"]

[project.scripts]
cinnamon = "cinnamon.cli:cli"
